Menus.Interfaces + Menus.Test

--- a/Ex04/Ex04.Menus.Test/Ex04.Menus.Test.csproj
+++ b/Ex04/Ex04.Menus.Test/Ex04.Menus.Test.csproj
@@ -35,5 +35,21 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="CountLowercaseLetters.cs" />
+    <Compile Include="Program.cs" />
+    <Compile Include="ShowCurrentDate.cs" />
+    <Compile Include="ShowCurrentTime.cs" />
+    <Compile Include="ShowVersion.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Ex04.Menus. Interfaces\Ex04.Menus.Interfaces.csproj">
+      <Project>{07ee5cd7-3212-4694-85e6-5df6595ca9ad}</Project>
+      <Name>Ex04.Menus.Interfaces</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
