--- a/Ex04/Ex04.Menus. Interfaces/Ex04.Menus.Interfaces.csproj
+++ b/Ex04/Ex04.Menus. Interfaces/Ex04.Menus.Interfaces.csproj
@@ -38,5 +38,14 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="IMenuItemExecutable.cs" />
+    <Compile Include="MenuItem.cs" />
+    <Compile Include="MainMenu.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System" />
+    <Reference Include="System.Collections" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
