--- a/Ex04/Ex04.Menus. Interfaces/Ex04.Menus.Interfaces.csproj
+++ b/Ex04/Ex04.Menus. Interfaces/Ex04.Menus.Interfaces.csproj
@@ -40,8 +40,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IMenuItemExecutable.cs" />
-    <Compile Include="MenuItem.cs" />
-    <Compile Include="MainMenu.cs" />
+    <Compile Include="MenuItemInterfaces.cs" />
+    <Compile Include="MainMenuInterfaces.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
