--- a/Ex04/Ex04.Menus.Events/Ex04.Menus.Events.csproj
+++ b/Ex04/Ex04.Menus.Events/Ex04.Menus.Events.csproj
@@ -39,8 +39,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainMenu.cs" />
-    <Compile Include="MenuItem.cs" />
+    <Compile Include="MainMenuEvents.cs" />
+    <Compile Include="MenuItemEvents.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
